<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mx.ken.devf.uper.PaymentActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"></LinearLayout>


    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/credit_card_et"
        android:inputType="number"
        android:hint="@string/hint_tarjeta"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:inputType="number"
        android:layout_below="@+id/credit_card_et"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout5">

        <EditText
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:inputType="number"
            android:hint="@string/hint_mm"
            android:id="@+id/mm_et" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="2"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:hint="@string/hint_aa"
            android:id="@+id/aa_et" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.3"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/hint_cvv"
            android:id="@+id/cvv_Et" />

    </LinearLayout>

    <Spinner
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/linearLayout5"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cp_et"
        android:hint="@string/hint_codigo_postal"
        android:layout_marginLeft="10dp"
        android:inputType="number"
        android:layout_alignBottom="@+id/spinner"
        android:layout_toEndOf="@+id/spinner" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse_button"
        android:id="@+id/register_button_payment"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_marginTop="30dp"
        android:layout_below="@id/cp_et" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/terminos_payment"
        android:id="@+id/textView8"
        android:textColor="@color/link_text_material_light"
        android:layout_below="@+id/register_button_payment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />


</RelativeLayout>
